# ransom-bpf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cli.c  cli.h  common.h  config.c  config.h  detector.c  detector.h  hello_kern.c  hello_user.c  logger.c  logger.h  main.c  ransom-bpf.service  ransom.conf  ransom_simulator.py  setup_victim.sh  state_manager.c  state_manager.h  whitelist.c  whitelist.h
headers/: common.h  logger.h  whitelist.h
src/: cli.c  config.c  state_manager.c
tests/: ransom_simulator.py  test_runner.c
